--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,13 @@ group= "com.qkninja.clockhud" // http://maven.apache.org/guides/mini/guide-namin
 archivesBaseName = "ClockHUD"
 
 minecraft {
-    version = "1.8.8-11.15.0.1623-1.8.8"
+    version = "1.8.8-11.15.0.1628-1.8.8"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not allways work.
+    // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20151122"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
