--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 mod_version=1.3.1
-minecraft_version=1.10
-forge_version=12.18.0.1996-1.10.0
+minecraft_version=1.10.2
+forge_version=12.18.0.2010
 mappings_version=snapshot_20160518
