--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-mod_version=1.3.3
+# suppress inspection "UnusedProperty" for whole file
+mod_version=1.4.0
 minecraft_version=1.11
-forge_version=13.19.0.2153
+forge_version=13.19.1.2189
 mappings_version=snapshot_20161119
